feat✨ ws只在摄像头开启后连接

--- a/static/index.html
+++ b/static/index.html
@@ -32,7 +32,7 @@
         if (!App.isOpen) {
           const openRes = await open();
           console.log('openRes', openRes);
-          // if (!openRes) return; // 开启失败
+          if (!openRes) return; // 开启失败
         }
 
         // 连接ws
